demo/istio/locality-lb.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dubbo-circuit-breaker-rule
spec:
  host: org.apache.dubbo.samples.basic.api.demoservice
  trafficPolicy:
    loadBalancer:
      localityLbSetting:
        distribute:
          - from: bj/800002/*
            to:
              bj/800002/*: 90
              bj/800005/*: 10
        enabled: true
    outlierDetection:
      baseEjectionTime: 5m
      consecutive5xxErrors: 3
      interval: 30s
